objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Environmental_Footprint__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Environmental Footprint</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Generic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Italy_Navision_Ref_Number__c</fullName>
        <label>Italy Navision Ref Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UK_Navision_Ref_Num__c</fullName>
        <label>UK Navision Ref Num</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WarningStock__c</fullName>
        <label>WarningStock</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>